srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  type: NodePort
  selector:
    app: ftps
  ports:
  - port: 21
    name: ftps
  - port: 21000
    name: ftps-data

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: service_ftps
        imagePullPolicy: Never
