srcs/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 8080
    targetPort: 8080
  selector:
    app: test

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: service_test
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
